<resources>
    <string name="app_name">PassportChallenge</string>
    <string name="activity_main">User Profiles</string>
    <string name="activity_create_user">Profile View</string>
    <string name="list_view_image">User image in list view</string>

    <!--menu strings -->
    <string name="action_list_settings">List Settings</string>
    <string name="action_filter_by">Filter By</string>
    <string name="action_sort">Sort By</string>
    <string name="action_edit">Edit User</string>
    <string name="action_done">Done</string>
    <!-- sub menu strings -->
    <string name="action_sort_by_id">Id</string>
    <string name="action_sort_by_name_asc">Name Ascending</string>
    <string name="action_sort_by_name_desc">Name Descending</string>
    <string name="action_sort_by_age_asc">Age Ascending</string>
    <string name="action_sort_by_age_desc">Age Descending</string>

    <!-- hint strings -->
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>

</resources>
