<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_list_options"
        android:icon="@drawable/ic_action_list"
        android:title="@string/action_list_settings"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_options"
                android:icon="@drawable/ic_sort_by"
                android:title="@string/action_sort"
                app:showAsAction="never">

                <menu>
                    <item
                        android:id="@+id/action_sort_by_id"
                        android:title="@string/action_sort_by_id"
                        app:showAsAction="never"/>

                    <item
                        android:id="@+id/action_sort_by_name_asc"
                        android:title="@string/action_sort_by_name_asc"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_sort_by_name_desc"
                        android:title="@string/action_sort_by_name_desc"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_sort_by_age_asc"
                        android:title="@string/action_sort_by_age_asc"
                        app:showAsAction="never"/>

                    <item
                        android:id="@+id/action_sort_by_age_desc"
                        android:title="@string/action_sort_by_age_desc"
                        app:showAsAction="never"/>

                </menu>
            </item>

            <item
                android:id="@+id/action_filter_by"
                android:icon="@drawable/ic_filter_list"
                android:title="@string/action_filter_by"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>